# loopguardian

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml  pytest.ini  requirements.txt  setup.py  uninstall.sh
.github/workflows/: ci.yml  release.yml
docs/: QUICK_START.md  TROUBLESHOOTING.md  USER_GUIDE.md
loopguard/: __init__.py  adaptive_detector.py  cli.py  config.py  config_validator.py  error_handler.py  file_watcher.py  log_parser.py  loop_detector.py  notifications.py  performance_monitor.py  process_monitor.py  session_analytics.py  session_discovery.py  types.py  wizard.py
loopguard/templates/: com.loopguard.agent.plist
tests/: README.md  sample_session.jsonl  simple_session.jsonl  test_cli.py  test_config.py  test_error_handler.py  test_integration.py  test_loop_detector.py  test_notifications.py  test_real_session.py  test_scenarios.py  test_wizard.py
