[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopguardian"
version = "0.1.1"
description = "Real-time AI coding agent loop detector for Claude Code"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "LoopGuard Team", email = "team@loopguard.dev"},
]
maintainers = [
    {name = "LoopGuard Team", email = "team@loopguard.dev"},
]
keywords = ["claude", "code", "monitoring", "loop", "detection", "debugging", "ai", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "watchdog>=3.0.0,<4.0.0",
    "psutil>=5.9.0,<6.0.0",
    "click>=8.0.0,<9.0.0",
    "jsonschema>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings>=0.23.0",
    "mkdocs-gen-files>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/loopguard/loopguard"
Documentation = "https://loopguard.readthedocs.io/"
Repository = "https://github.com/loopguard/loopguard"
"Bug Tracker" = "https://github.com/loopguard/loopguard/issues"
Changelog = "https://github.com/loopguard/loopguard/blob/main/CHANGELOG.md"

[project.scripts]
loopguardian = "loopguard.cli:main"
loopguardian-monitor = "loopguard.monitor:main"
loopguardian-config = "loopguard.config:main"

[tool.setuptools]
packages = ["loopguard"]
include-package-data = true

[tool.setuptools.package-data]
loopguard = [
    "data/*.json",
    "data/*.yaml",
    "data/*.yml",
    "templates/*.plist",
    "templates/*.xml",
    "templates/*.conf",
    "scripts/*.sh",
    "scripts/*.py",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["loopguard"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "watchdog.*",
    "psutil.*",
]
ignore_missing_imports = true
